<resources>
    <string name="app_name">Tajr</string>
    <string name="top_sheet_behavior" translatable="false">com.greyeg.tajr.sheets.TopSheetBehavior</string>
    <string name="calc_dialog_clear">Clear</string>
    <string name="calc_dialog_cancel">Cancel</string>
    <string name="calc_dialog_ok">OK</string>
    <string name="calc_answer">Ans</string>
    <string name="slide_to_cancel">"Slide to cancel"</string>
    <string name="app_info">"A WhatsApp style audio recording view to send voice notes in chat.\nHold the Mic to record, then slide left to cancel or swipe up to Lock and record.\n\nCredit:\nVarun John\nhttps://github.com/varunjohn\nvarunjohn1990@gmail.com"</string>
    <string name="open_dialog">Open dialog</string>
    <string name="result_value">Result</string>
    <string name="result_value_none">None</string>
    <string name="calc_settings">Calculator settings</string>
    <string name="option_sign">Sign can be changed</string>
    <string name="option_sign_show_btn">Show sign button</string>
    <string name="option_answer_btn">Show answer button</string>
    <string name="option_clear_operation">Clear display on operation button click</string>
    <string name="option_show_zero">Show zero when there is no value</string>
    <string name="option_max_value">Maximum value:</string>
    <string name="option_max_int">Maximum integer digits:</string>
    <string name="option_max_frac">Maximum fractional digits:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fontello_logo" translatable="false">&#xe8ad;</string>
    <string name="fontello_user" translatable="false">&#xe800;</string>
    <string name="material_icon_settings" translatable="false">&#xeabe;</string>
    <string name="fontello_password" translatable="false">&#xe9df;</string>
    <string name="fontello_searc" translatable="false">&#xea01;</string>
    <string name="fontello_x_mark" translatable="false">&#xe887;</string>
    <string name="material_icon_info_box" translatable="false">&#xe896;</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="text">Name</string>
    <string name="phone">Phone</string>
    <string name="email">User name</string>
    <string name="log_in">Login</string>
    <string name="logout">Logout</string>
    <string name="wati_to_log_in">Login...</string>
    <string name="Product">Product</string>
    <string name="stause">Status</string>
    <string name="client_name">Client name</string>
    <string name="client_address">Client address</string>
    <string name="client_area">Client area</string>
    <string name="client_city">Client city</string>
    <string name="client_order_phone">Client order phone</string>
    <string name="sender_name">Sender name</string>
    <string name="item_cost">Item cost</string>
    <string name="item_no">Item number</string>
    <string name="order_cost">Order cost</string>
    <string name="order_total_cost">Order total cost</string>
    <string name="shipping_retum_cost">Shipping retum cost</string>
    <string name="real_shipping_return_cost">Real shipping return cost</string>
    <string name="notes">Notes</string>
    <string name="extra_fields">Extra fields</string>
    <string name="jobe">Jobe</string>
    <string name="job">Job</string>
    <string name="monthly_income">Monthly income</string>
    <string name="national_id">National id</string>
    <string name="start_work">start work</string>
    <string name="stopWotking">Stop working</string>
    <string name="update">Update</string>
    <string name="cancel">Canel</string>
    <string name="client_feedback">Client feedback</string>
    <string name="order_type">Order type</string>
    <string name="client_busy">Client busy</string>
    <string name="client_delay">Client delay</string>
    <string name="client_cancel">Client cancel</string>
    <string name="client_noanswer">Client no answer</string>
    <string name="order_data_confirmed">Confirm order data</string>
    <string name="client_phone_error">Client phone error</string>
    <string name="submit_order">Submit the order</string>
    <string name="cancel_order">Cancel order</string>
    <string name="pause_work">Pause work</string>
    <string name="finish_work">Finish work</string>
    <string name="resume_work">Resume work</string>
    <string name="wrong_number">Wrong number</string>
    <string name="pause_work_message">Do you want do finish th work</string>
    <string name="ask_finish_work">Ask to finish work</string>
    <string name="Return">Return</string>
    <string name="move">Move To update</string>
    <string name="settings">SETTINGS</string>
    <string name="mb_move_direction">mb_move_direction</string>
    <string name="mb_movement_right">mb_movement_right</string>
    <string name="mb_movement_top">mb_movement_top</string>
    <string name="mb_movement_bottom">mb_movement_bottom</string>
    <string name="mb_offset_inner">mb_offset_inner</string>
    <string name="mb_offset_outer">mb_offset_outer</string>
    <string name="mb_event_volume">mb_event_volume</string>
    <string name="mb_vibration_duration">mb_vibration_duration</string>
    <string name="mb_movement_left">mb_movement_left</string>
    <string name="current_position">CURRENT POSITION</string>
    <string name="choose">Choose</string>
    <string name="move_direction">Move Direction</string>
    <string name="vibration_duration">Vibration Duration</string>
    <string name="ok">OK</string>
    <string name="movement_left">Movement Left</string>
    <string name="movement_right">Movement Right</string>
    <string name="movement_top">Movement Top</string>
    <string name="movement_bottom">Movement Bottom</string>
    <string name="inner_offset">Inner Offset</string>
    <string name="outer_offset">Outer Offset</string>
    <string name="volume">Volume</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_sim_number">Choose Sim Number</string>
    <string name="sim_1">Sim 1</string>
    <string name="sim_2">Sim 2</string>
    <string name="default_sim_activ">Default sim active</string>
    <string name="new_order">New Order</string>
    <string name="search">Search</string>
    <string name="send_order">Send Order</string>
    <string name="money">Money</string>
    <string name="hours">Hours</string>
    <string name="points">Points</string>
    <string name="analytics">Analytics</string>
    <string name="no_orders_with_this_number">No orders with this number</string>
    <string name="end_call">End call</string>
    <string name="mute_mic">Mute mic</string>
    <string name="call">Call</string>
    <string name="cash">Cash</string>
    <string name="rank">Rank</string>
    <string name="download">Download</string>
    <string name="done">Done</string>
    <string name="error">Error</string>
    <string name="welcome_in_tajr">Welcome ! \n do you want to start work?</string>
    <string name="writ_phone_number">Writ phone number</string>
    <string name="warning">Warning!</string>
    <string name="update_order_warning_msg">You must update the order within 3 seconds or you will be charged 5 minutes of your work time</string>
    <string name="no_news_yet">No news yet</string>
    <string name="news">News</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="ask_finish_work_msg">Do you want to finish work ;</string>
    <string name="yes">Yes</string>
    <string name="send_problem">Send Problem</string>
    <string name="what_problem">What is the problem</string>
    <string name="send">Send</string>
    <string name="choose_lang">Choose language</string>
    <string name="arabic">عربي</string>
    <string name="english">English</string>
    <string name="choose_language">Choose language</string>
    <string name="swip_start">Swipe to start work</string>
    <string name="turn_on_mic">Turn on mic</string>
    <string name="updating_order">Updating order</string>
    <string name="shipping_state">Shipping state</string>
    <string name="discount">Discount</string>
    <string name="no_internet">No Internet connection</string>
    <string name="request">Request</string>
    <string name="request_money">Request money</string>
    <string name="balance_history">Balance history</string>
    <string name="availabl_balance">Available Balance</string>
    <string name="time">Time</string>
    <string name="Balance">Balance</string>
    <string name="calculator">Calculator</string>
    <string name="wrong_message">Write message</string>
    <string name="chat">Chat</string>
    <string name="recordes">Recordes</string>
    <string name="call_listener_on">Call Recorder ON</string>
    <string name="call_listener_off">Call Recorder OFF</string>
    <string name="messages">Messages</string>
    <string name="work">Work</string>
    <string name="carts">Carts</string>
    <string name="copy">Copy</string>
    <string name="available_balance">Available balance</string>
    <string name="omla">LE</string>
    <string name="admin_login">Admin login</string>
    <string name="amin_records">Admin records</string>
    <string name="all_ecords">All records</string>
    <string name="new_card">New Card</string>
    <string name="consumption">Consumption</string>
    <string name="card_expiration_time">Card expiration time</string>
    <string name="the_remaining_amount_of_card">The remaining amount of card</string>
    <string name="remaining">Remaining</string>
    <string name="minute">minute</string>
    <string name="expired">Expired</string>
    <string name="used">Used</string>
    <string name="cards">Cards</string>
    <string name="remember_password">Remember password</string>
    <string name="wrong_email_pass">Wrong Password or email</string>
    <string name="problem_in_order">Order has problem</string>
    <string name="recharge">Recharge</string>
    <string name="go_to_order">Go to order</string>
    <string name="add_product">Add product</string>
    <string name="Products">Products</string>
    <string name="not_available">Not available</string>
    <string name="automatic_update_orders">Auto update orders</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="delay_order">Delay the order</string>
    <string name="confirm_shipper_status">Confirm shipper status</string>
    <string name="shipping_cost">Shipping cost</string>
    <string name="order_id">Order id</string>
    <string name="status">Status</string>
    <string name="product_details">Product details</string>
    <string name="phone_boot">Phone bot</string>
    <string name="dummy_product" translatable="false">red soes with great quality size 38</string>
    <string name="app_update_warning">there is a new version available , please update your version</string>
    <string name="product_price"> %1$d LE</string>
    <string name="later">later</string>
    <string name="dummy_category">Shoes</string>
</resources>