<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ProgressBar
                android:id="@+id/ProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="false"
                android:maxHeight="10dip"
                android:minHeight="10dip"
                android:progress="0"
                android:progressDrawable="@drawable/ic_greenprogress" />

            <TextView
                android:id="@+id/present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/remaining"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageButton
                android:layout_alignParentEnd="true"
                android:id="@+id/bt_expand"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:rotation="180"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_expand_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
        >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/order_id"
                android:inputType="number"
                android:hint="@string/order_id"
                style="@style/oder_item_edit_text_style_editable2" />



        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/client_name"
                android:inputType="text"
                android:hint="@string/client_name"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sender_name"
                android:inputType="text"
                android:hint="@string/sender_name"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productsRecycler"
            android:layoutAnimation="@anim/layout_animation"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/add_product"
            android:src="@drawable/ic_add_circle_black_24dp"
            android:layout_gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/status"
                android:inputType="text"
                android:hint="@string/status"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/shipping_status"
                android:inputType="text"
                android:hint="@string/shipping_state"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/client_order_phone1"
                android:inputType="text"
                android:hint="@string/client_order_phone"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/client_order_phone1_boot"
                android:inputType="text"
                android:hint="@string/phone_boot"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/client_address"
                android:inputType="text"
                android:hint="@string/client_address"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/client_area"
                android:inputType="text"
                android:hint="@string/client_area"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/client_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="26dp"
            android:background="@color/red"
            android:gravity="center"
            android:tag="client_name_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/shipping_cost"
                android:inputType="number"
                android:hint="@string/shipping_cost"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/discount"
                android:inputType="number"
                android:hint="@string/discount"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/order_total_cost"
                android:inputType="number"
                android:hint="@string/order_total_cost"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ntes"
                android:inputType="text"
                android:hint="@string/order_total_cost"
                style="@style/oder_item_edit_text_style_editable2" />
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>


    </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/normalUpdateButtonShipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:clickable="true"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            app:rippleColor="@android:color/white"
            app:srcCompat="@drawable/fab_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>