<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/img"
        android:src="@drawable/ic_warning_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/body"
        android:text="@string/app_update_warning"
        android:textSize="17sp"
        android:lineSpacingMultiplier="0.7"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/update"
        android:text="@string/update"
        android:textColor="#fff"
        android:background="@color/material_green_400"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/later"
        android:layout_marginTop="5dp"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/later"
        android:text="@string/later"
        android:textColor="#fff"
        android:background="@color/material_red_400"
        app:layout_constraintTop_toTopOf="@id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/update"
        />

</androidx.constraintlayout.widget.ConstraintLayout>