<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_image_container"
        app:cardElevation="5dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/product"/>



    </androidx.cardview.widget.CardView>

    <com.greyeg.tajr.helper.font.RobotoTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_details_label"
        android:text="@string/product_details"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/product_image_container"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_details_container"
        app:cardElevation="5dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/product_details_label"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            >


        <com.greyeg.tajr.helper.font.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_product"
            android:id="@+id/product_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:id="@+id/product_price"
            android:textSize="18sp"
            android:textColor="@color/primary"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            android:layout_marginTop="5sp"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_category"
                android:id="@+id/product_category"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/product_price"
                android:layout_marginTop="5sp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_product"
                android:id="@+id/product_description"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/product_category"
                android:layout_marginTop="5sp"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>